# novi

./: CHANGES.TXT  EXAMPLES.TXT  FAQ.TXT  INSTALL.TXT  LICENSE  LICENSE.INCLUDE  Makefile  Makefile.in  README.TXT  WISHLIST.TXT  aclocal.m4  config.status  configure  configure.ac  install-sh  libtool  novi.spec-autogen  novi.spec-autogen.in
doc/: EXAMPLES.html  FAQ.html  gen_doc  novi.1  novi.1.html  novi.1.pod  novi_examples.1  novi_examples.1.html  novi_examples.1.pod
include/: Action.h  AppConfig.h  AppException.h  AttributeMap.h  CommonUtil.h  DirectoryRPMSource.h  GlobObj.h  GzipInputStream.h  HandlerFrame.h  HardlinkAction.h  ListAction.h  ObjectRegistry.h  PrintAction.h  Product.h  ProductList.h  RPM.h  RPMFileReader.h  RPMInfoHandler.h  RPMSource.h  RPMSourceDescription.h  RepoMDParser.h  RepodataRPMSource.h  SoftlinkAction.h  TagStack.h  main.h
include.generated/: NoviInfo.h  NoviInfo.h.in
src/: Action.cc  AppConfig.cc  AppException.cc  AttributeMap.cc  DirectoryRPMSource.cc  GlobObj.cc  GzipInputStream.cc  HardlinkAction.cc  ListAction.cc  NoviInfo.cc  PrintAction.cc  Product.cc  ProductList.cc  RPM.cc  RPMFileReader.cc  RPMInfoHandler.cc  RPMSourceDescription.cc  RepoMDParser.cc  RepodataRPMSource.cc  SoftlinkAction.cc  TagStack.cc  main.cc
